ghc/compiler/tests/typecheck/should_succeed/tc069.hs


x = 'a'
(y:ys) = ['a','b','c'] where p = x
